--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -117,6 +117,7 @@
                         android:fontFamily="sans-serif-condensed"
                         android:textColor="@color/colorAccent"
                         android:text="Power:"
+                        android:textAllCaps="true"
                         android:textSize="24sp"
                         android:textStyle="italic" />
 
@@ -155,6 +156,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textAllCaps="true"
                         android:text="Hand" />
 
                     <View
@@ -167,6 +169,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textAllCaps="true"
                         android:text="Played" />
 
                 </LinearLayout>
@@ -250,13 +253,13 @@
 
                 </LinearLayout>
 
-                <ProgressBar
-                    android:id="@+id/time_to_action_bar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:progress="100" />
-
+                <!--    <ProgressBar
+                        android:id="@+id/time_to_action_bar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:progress="100" />
+    -->
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
