--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -329,12 +329,17 @@
                     android:layout_weight="3">
 
                     <ScrollView
+                        android:id="@+id/id_log_scroll"
+
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
                         android:layout_margin="2dp">
 
                         <TextView
                             android:id="@+id/log"
+                            android:scrollbars="vertical"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </ScrollView>
