--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -245,7 +245,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed"
                         android:gravity="center"
-                        android:text="Spieltisch"
+                        android:text="PLAYDESK"
                         android:textColor="@color/colorAccent"
                         android:textAllCaps="true"
                         android:textSize="24sp"
