--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/startup_image"
+        android:src="@drawable/munchkin_classic"
         android:scaleType="centerCrop"/>
 
 </FrameLayout>
