--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -27,7 +27,7 @@
             android:background="@drawable/style_button"
             android:text="Move to Played" />
 
-        <Button
+        <!--Button
             android:id="@+id/move_to_hand_button"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/button_margin"
             android:background="@drawable/style_button"
-            android:text="Move to desk" />
+            android:text="Move to desk" /-->
 
         <Button
             android:id="@+id/move_to_passive_card_deck"
